--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DangerousDC.org - Documenting DC Safety Violations</title>
+    <title>DangerousDC.org</title>
     <style>
         * {
             margin: 0;
@@ -12,266 +12,197 @@
         }
 
         body {
-            font-family: 'Georgia', serif;
-            line-height: 1.6;
+            font-family: 'Arial', sans-serif;
+            line-height: 1.4;
             color: #333;
+            background-color: #fff;
+        }
+
+        header {
+            background-color: #000;
+            color: white;
+            padding: 1rem 0;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            font-weight: 300;
+            margin-bottom: 0.5rem;
+        }
+
+        .tagline {
+            font-size: 1rem;
+            opacity: 0.8;
+        }
+
+        nav {
             background-color: #f8f9fa;
+            padding: 0.5rem 0;
+            text-align: center;
+            border-bottom: 1px solid #eee;
+        }
+
+        nav a {
+            color: #333;
+            text-decoration: none;
+            margin: 0 1rem;
+            font-size: 1rem;
+        }
+
+        nav a:hover {
+            color: #000;
         }
 
         .container {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        header {
-            background-color: #dc3545;
-            color: white;
-            padding: 1rem 0;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-
-        h1 {
-            font-size: 2.5rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .subtitle {
-            font-size: 1.2rem;
-            opacity: 0.9;
-        }
-
-        nav {
-            background-color: #495057;
-            padding: 1rem 0;
-        }
-
-        nav ul {
-            list-style: none;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 2rem;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 0.5rem 1rem;
-            border-radius: 4px;
-            transition: background-color 0.3s;
-        }
-
-        nav a:hover {
-            background-color: #6c757d;
-        }
-
-        main {
-            padding: 2rem 0;
+            padding: 2rem 1rem;
         }
 
         .intro {
-            background-color: white;
-            padding: 2rem;
-            border-radius: 8px;
-            margin-bottom: 2rem;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            text-align: center;
+            margin-bottom: 3rem;
         }
 
-        .violation-categories {
+        .intro h2 {
+            font-size: 1.5rem;
+            font-weight: 300;
+            margin-bottom: 1rem;
+        }
+
+        .intro p {
+            font-size: 1.1rem;
+            color: #666;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        .photo-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 2rem;
-            margin-bottom: 2rem;
-        }
-
-        .category-card {
-            background-color: white;
-            padding: 1.5rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            border-left: 4px solid #dc3545;
-        }
-
-        .category-card h3 {
-            color: #dc3545;
-            margin-bottom: 1rem;
-            font-size: 1.4rem;
-        }
-
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 1rem;
-            margin-top: 2rem;
-        }
-
-        .photo-item {
-            background-color: white;
-            border-radius: 8px;
-            overflow: hidden;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            transition: transform 0.3s;
-        }
-
-        .photo-item:hover {
-            transform: translateY(-5px);
-        }
-
-        .photo-item img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-        }
-
-        .photo-caption {
-            padding: 1rem;
-        }
-
-        .submit-section {
-            background-color: white;
-            padding: 2rem;
-            border-radius: 8px;
-            margin-top: 2rem;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-
-        .alert {
-            background-color: #fff3cd;
-            border: 1px solid #ffeaa7;
-            border-radius: 4px;
-            padding: 1rem;
-            margin-bottom: 1rem;
-        }
-
-        footer {
-            background-color: #343a40;
-            color: white;
-            text-align: center;
-            padding: 1rem 0;
             margin-top: 3rem;
         }
 
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 2rem;
-            }
-            
-            nav ul {
-                flex-direction: column;
-                gap: 0.5rem;
-            }
-            
-            .violation-categories {
-                grid-template-columns: 1fr;
-            }
+        .photo-card {
+            background: #fff;
+            border: 1px solid #eee;
+            border-radius: 4px;
+            overflow: hidden;
+            transition: box-shadow 0.3s;
+        }
+
+        .photo-card:hover {
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        }
+
+        .photo-card img {
+            width: 100%;
+            height: 250px;
+            object-fit: cover;
+        }
+
+        .photo-info {
+            padding: 1rem;
+        }
+
+        .photo-title {
+            font-weight: 600;
+            margin-bottom: 0.5rem;
+        }
+
+        .photo-location {
+            color: #666;
+            font-size: 0.9rem;
+            margin-bottom: 0.5rem;
+        }
+
+        .photo-date {
+            color: #999;
+            font-size: 0.8rem;
+        }
+
+        .upload-prompt {
+            text-align: center;
+            padding: 3rem 1rem;
+            background-color: #f8f9fa;
+            border: 2px dashed #ccc;
+            border-radius: 8px;
+            margin: 2rem 0;
+        }
+
+        .upload-prompt h3 {
+            margin-bottom: 1rem;
+            color: #666;
+        }
+
+        footer {
+            background-color: #000;
+            color: white;
+            text-align: center;
+            padding: 1rem 0;
+            margin-top: 4rem;
         }
     </style>
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>DangerousDC.org</h1>
-            <p class="subtitle">Documenting Safety Violations in Washington, DC</p>
-        </div>
+        <h1>DangerousDC.org</h1>
+        <p class="tagline">Documenting DC safety violations</p>
     </header>
 
     <nav>
-        <div class="container">
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#violations">Violations</a></li>
-                <li><a href="#submit">Submit</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
+        <a href="index.html">Photos</a>
+        <a href="about.html">About</a>
+        <a href="submit.html">Submit</a>
     </nav>
 
-    <main>
-        <div class="container">
-            <section id="home" class="intro">
-                <h2>Making DC Streets Safer Through Documentation</h2>
-                <p>DangerousDC.org is a citizen-led initiative documenting safety violations throughout Washington, DC. We photograph and catalog illegal sign placements, sightline violations, broken sidewalks, and other infrastructure issues that make our streets less safe for pedestrians, cyclists, and drivers.</p>
-                <p>Our goal is to raise awareness and provide documented evidence to help city officials prioritize repairs and enforcement.</p>
-            </section>
-
-            <section id="violations" class="violation-categories">
-                <div class="category-card">
-                    <h3>🚧 Illegal Sign Placement</h3>
-                    <p>Signs placed in violation of DC regulations that obstruct visibility, block sidewalks, or create safety hazards. This includes improperly placed political signs, business signage, and temporary construction signs.</p>
-                </div>
-
-                <div class="category-card">
-                    <h3>🚗 Sightline Violations</h3>
-                    <p>Illegal parking that blocks visibility at intersections, crosswalks, and driveways. These violations create dangerous blind spots for pedestrians and drivers, particularly affecting children and wheelchair users.</p>
-                </div>
-
-                <div class="category-card">
-                    <h3>🕳️ Sidewalk Infrastructure</h3>
-                    <p>Broken, cracked, or missing sidewalk sections that create tripping hazards and accessibility barriers. These issues particularly impact elderly residents, people with disabilities, and parents with strollers.</p>
-                </div>
-            </section>
-
-            <section class="gallery">
-                <!-- Photos will be dynamically added here -->
-                <div class="photo-item">
-                    <img src="https://via.placeholder.com/300x200?text=Upload+Your+Photos" alt="Upload your photos">
-                    <div class="photo-caption">
-                        <strong>Your Documentation Matters</strong>
-                        <p>Help us build a comprehensive database of safety violations in DC.</p>
-                    </div>
-                </div>
-            </section>
-
-            <section id="submit" class="submit-section">
-                <h2>Submit a Violation</h2>
-                <div class="alert">
-                    <strong>Note:</strong> Submission system is currently being developed. For now, please email photos and details to the contact address below.
-                </div>
-                <p>When documenting violations, please include:</p>
-                <ul>
-                    <li>Clear photos from multiple angles</li>
-                    <li>Exact location (address or intersection)</li>
-                    <li>Date and time of photo</li>
-                    <li>Description of the safety concern</li>
-                    <li>Any relevant context (ongoing construction, etc.)</li>
-                </ul>
-            </section>
-
-            <section id="about" class="intro">
-                <h2>About This Project</h2>
-                <p>DangerousDC.org was created by concerned DC residents who believe that systematic documentation of safety violations can help prioritize city resources and improve enforcement. We work to:</p>
-                <ul>
-                    <li>Create a public record of recurring safety issues</li>
-                    <li>Provide evidence for 311 and agency reports</li>
-                    <li>Raise community awareness about safety concerns</li>
-                    <li>Support data-driven policy decisions</li>
-                </ul>
-                <p>This is a non-partisan, community safety initiative.</p>
-            </section>
+    <div class="container">
+        <div class="intro">
+            <h2>Making DC Streets Safer</h2>
+            <p>A visual record of illegal signs, parking violations, and broken infrastructure that create safety hazards throughout Washington, DC.</p>
         </div>
-    </main>
+
+        <div class="photo-grid">
+            <!-- Sample photo cards - replace with actual photos -->
+            <div class="photo-card">
+                <img src="https://via.placeholder.com/400x250?text=Illegal+Sign+Placement" alt="Illegal sign blocking sidewalk">
+                <div class="photo-info">
+                    <div class="photo-title">Sign blocking sidewalk access</div>
+                    <div class="photo-location">14th & U Street NW</div>
+                    <div class="photo-date">January 15, 2025</div>
+                </div>
+            </div>
+
+            <div class="photo-card">
+                <img src="https://via.placeholder.com/400x250?text=Sightline+Violation" alt="Car blocking intersection sightline">
+                <div class="photo-info">
+                    <div class="photo-title">Vehicle blocking crosswalk sightline</div>
+                    <div class="photo-location">Connecticut Ave & R Street NW</div>
+                    <div class="photo-date">January 12, 2025</div>
+                </div>
+            </div>
+
+            <div class="photo-card">
+                <img src="https://via.placeholder.com/400x250?text=Broken+Sidewalk" alt="Damaged sidewalk creating tripping hazard">
+                <div class="photo-info">
+                    <div class="photo-title">Cracked sidewalk creating accessibility barrier</div>
+                    <div class="photo-location">Georgia Ave & Kennedy Street NW</div>
+                    <div class="photo-date">January 10, 2025</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="upload-prompt">
+            <h3>Have photos to share?</h3>
+            <p>Help document safety violations in your neighborhood.<br>
+            <a href="submit.html">Submit your photos</a> or email safety@dangerousdc.org</p>
+        </div>
+    </div>
 
     <footer>
-        <div class="container">
-            <p>&copy; 2025 DangerousDC.org | Making DC Streets Safer | Contact: safety@dangerousdc.org</p>
-        </div>
+        <p>&copy; 2025 DangerousDC.org</p>
     </footer>
-
-    <script>
-        // Simple smooth scrolling for navigation
-        document.querySelectorAll('nav a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                if (target) {
-                    target.scrollIntoView({
-                        behavior: 'smooth',
-                        block: 'start'
-                    });
-                }
-            });
-        });
-    </script>
 </body>
 </html>
