Add first real photo: IMG_0492.JPG

--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
         <div class="photo-grid">
             <!-- Sample photo cards - replace with actual photos -->
             <div class="photo-card">
-                <img src="https://via.placeholder.com/400x250?text=Illegal+Sign+Placement" alt="Illegal sign blocking sidewalk">
+                <img src="images/IMG_0492.JPG" alt="Safety violation documented in DC">
                 <div class="photo-info">
-                    <div class="photo-title">Sign blocking sidewalk access</div>
-                    <div class="photo-location">14th & U Street NW</div>
-                    <div class="photo-date">January 15, 2025</div>
+                    <div class="photo-title">Safety violation documented</div>
+                    <div class="photo-location">Washington, DC</div>
+                    <div class="photo-date">August 10, 2025</div>
                 </div>
             </div>
 
