Replace placeholder photos with real photos: IMG_0890.JPG and IMG_0366.JPG

--- a/index.html
+++ b/index.html
@@ -176,20 +176,20 @@
             </div>
 
             <div class="photo-card">
-                <img src="https://via.placeholder.com/400x250?text=Sightline+Violation" alt="Car blocking intersection sightline">
+                <img src="images/IMG_0890.JPG" alt="Safety violation documented in DC">
                 <div class="photo-info">
-                    <div class="photo-title">Vehicle blocking crosswalk sightline</div>
-                    <div class="photo-location">Connecticut Ave & R Street NW</div>
-                    <div class="photo-date">January 12, 2025</div>
+                    <div class="photo-title">Safety violation documented</div>
+                    <div class="photo-location">Washington, DC</div>
+                    <div class="photo-date">August 10, 2025</div>
                 </div>
             </div>
 
             <div class="photo-card">
-                <img src="https://via.placeholder.com/400x250?text=Broken+Sidewalk" alt="Damaged sidewalk creating tripping hazard">
+                <img src="images/IMG_0366.JPG" alt="Safety violation documented in DC">
                 <div class="photo-info">
-                    <div class="photo-title">Cracked sidewalk creating accessibility barrier</div>
-                    <div class="photo-location">Georgia Ave & Kennedy Street NW</div>
-                    <div class="photo-date">January 10, 2025</div>
+                    <div class="photo-title">Safety violation documented</div>
+                    <div class="photo-location">Washington, DC</div>
+                    <div class="photo-date">August 10, 2025</div>
                 </div>
             </div>
         </div>
